added Filebeat conf

--- a/Logstash/logstash.conf
+++ b/Logstash/logstash.conf
@@ -1,7 +1,6 @@
 input {
-  file {
-    path => "/log.log"
-    start_position => "beginning"
+  beats {
+    port => 5044
   }
 }
 
@@ -13,5 +12,8 @@ output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
     index => "test_index"
+  }
+  stdout {
+    codec => rubydebug
   }
 }
