--- a/Filebeat/Dockerfile
+++ b/Filebeat/Dockerfile
@@ -9,12 +9,14 @@ RUN wget -qO- https://artifacts.elastic.co/GPG-KEY-elasticsearch | gpg --dearmor
 RUN echo "deb [signed-by=/usr/share/keyrings/elasticsearch-keyring.gpg] https://artifacts.elastic.co/packages/8.x/apt stable main" | tee /etc/apt/sources.list.d/elastic-8.x.list
 
 RUN apt-get update
-RUN apt-get install logstash
+RUN apt-get install -y filebeat
 
-COPY logstash.conf /etc/logstash/conf.d/
+ENV PATH=/usr/share/filebeat/bin:$PATH
 
-ENV PATH=/usr/share/logstash/bin:$PATH
+COPY filebeat.yml /etc/filebeat/filebeat.yml
 
-CMD ["logstash", "--path.settings=/etc/logstash"]
+RUN mkdir /logs
+
+CMD ["filebeat", "-e", "-c", "/etc/filebeat/filebeat.yml"]
 
 #CMD ["tail", "-f", "/dev/null"]
