setup with logstash filtering from 2 different log files

--- a/Logstash/logstash.conf
+++ b/Logstash/logstash.conf
@@ -5,13 +5,33 @@ input {
 }
 
 filter {
+  grok {
+    match => { 
+      "message" => [ 
+        "\[%{WORD:log_level}\] \[%{TIMESTAMP_ISO8601:log_date}\] \[%{DATA:source_field}\] %{GREEDYDATA:message}",
+        "\[%{DATA:source_field}\] \[%{TIMESTAMP_ISO8601:log_date}\] \[%{WORD:log_level}\] %{GREEDYDATA:message}"
+      ]
+    }
+  }
 
+  date {
+    match => ["log_date", "ISO8601"]
+    target => "@timestamp"
+  }
 }
 
 output {
-  elasticsearch {
-    hosts => ["http://elasticsearch:9200"]
-    index => "test_index"
+  if [source_field] =~ /log.log/ {
+    elasticsearch {
+      hosts => ["http://elasticsearch:9200"]
+      index => "log_index"
+    }
+  }
+  else {
+    elasticsearch {
+      hosts => ["http://elasticsearch:9200"]
+      index => "test_index"
+    }
   }
   stdout {
     codec => rubydebug
