--- a/Logstash/logstash.conf
+++ b/Logstash/logstash.conf
@@ -1,6 +1,9 @@
 input {
   beats {
     port => 5044
+    ssl => true
+    ssl_certificate => "/etc/logstash/ssl/elastic.crt"
+    ssl_key => "/etc/logstash/ssl/key.pem"
   }
 }
 
@@ -23,14 +26,18 @@ filter {
 output {
   if [source_field] =~ /log.log/ {
     elasticsearch {
-      hosts => ["http://elasticsearch:9200"]
+      hosts => ["https://elasticsearch:9200"]
       index => "log_index"
+      ssl_certificate => "/etc/logstash/ssl/logstash.crt"
+      ssl_key => "/etc/logstash/ssl/key.pem"
     }
   }
   else {
     elasticsearch {
-      hosts => ["http://elasticsearch:9200"]
+      hosts => ["https://elasticsearch:9200"]
       index => "test_index"
+      ssl_certificate => "/etc/logstash/ssl/elastic.crt"
+      ssl_key => "/etc/logstash/ssl/key.pem"
     }
   }
   stdout {
