--- a/Elastic/elasticsearch.yml
+++ b/Elastic/elasticsearch.yml
@@ -20,7 +20,7 @@ cluster.name: transcendence
 #
 # Use a descriptive name for the node:
 #
-node.name: node-1
+node.name: node1
 #
 # Add custom attributes to the node:
 #
@@ -71,7 +71,7 @@ path.logs: /var/log/elasticsearch
 #
 # Bootstrap the cluster using an initial set of master-eligible nodes:
 #
-cluster.initial_master_nodes: ["node-1"]
+cluster.initial_master_nodes: ["node1"]
 #
 # For more information, consult the discovery and cluster formation module documentation.
 #
@@ -89,21 +89,20 @@ cluster.initial_master_nodes: ["node-1"]
 # --------------------------------------------------------------------------------
 
 # Enable security features
-xpack.security.enabled: false
+xpack.security.enabled: true
 
 xpack.security.enrollment.enabled: false
 
 # Enable encryption for HTTP API client connections, such as Kibana, Logstash, and Agents
 xpack.security.http.ssl:
-  enabled: false
-  keystore.path: certs/http.p12
-
+  enabled: true
+  key: /etc/elasticsearch/ssl/key.pem
+  certificate: /etc/elasticsearch/ssl/elastic.crt
 # Enable encryption and mutual authentication between cluster nodes
 xpack.security.transport.ssl:
-  enabled: false
-  verification_mode: certificate
-  keystore.path: certs/transport.p12
-  truststore.path: certs/transport.p12
+  enabled: true
+  key: /etc/elasticsearch/ssl/key.pem
+  certificate: /etc/elasticsearch/ssl/elastic.crt
 # Create a new cluster with the current node only
 # Additional nodes can still join the cluster later
 #cluster.initial_master_nodes: ["buildkitsandbox"]
