--- a/Filebeat/filebeat.yml
+++ b/Filebeat/filebeat.yml
@@ -156,12 +156,12 @@ output.logstash:
   # Optional SSL. By default is off.
   # List of root certificates for HTTPS server verifications
   #ssl.certificate_authorities: ["/etc/pki/root/ca.pem"]
-
+  protocol: "https"
   # Certificate for SSL client authentication
-  #ssl.certificate: "/etc/pki/client/cert.pem"
+  ssl.certificate: "/etc/filebeat/ssl/elastic.crt"
 
   # Client Certificate Key
-  #ssl.key: "/etc/pki/client/cert.key"
+  ssl.key: "/etc/filebeat/ssl/key.pem"
 
 # ================================= Processors =================================
 processors:
