--- a/Kibana/kibana.yml
+++ b/Kibana/kibana.yml
@@ -34,9 +34,9 @@ server.host: "0.0.0.0"
 # =================== System: Kibana Server (Optional) ===================
 # Enables SSL and paths to the PEM-format SSL certificate and SSL key files, respectively.
 # These settings enable SSL for outgoing requests from the Kibana server to the browser.
-#server.ssl.enabled: false
-#server.ssl.certificate: /path/to/your/server.crt
-#server.ssl.key: /path/to/your/server.key
+server.ssl.enabled: true
+server.ssl.certificate: /etc/kibana/ssl/elastic.crt
+server.ssl.key: /etc/kibana/ssl/key.pem
 
 # =================== System: Elasticsearch ===================
 # The URLs of the Elasticsearch instances to use for all your queries.
