--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "9200:9200"
       - "9300:9300"
     volumes:
-      - elasticsearch_data:/usr/share/elasticsearch/data
+      - ssl_data:/etc/elasticsearch/ssl
     restart: always
     networks:
       - network
@@ -19,7 +19,11 @@ services:
     ports:
       - "5601:5601"
     environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - ELASTICSEARCH_URL=https://elasticsearch:9200
+    depends_on:
+      - elasticsearch
+    volumes:
+      - ssl_data:/etc/kibana/ssl
     networks:
       - network
 
@@ -29,9 +33,11 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - ELASTICSEARCH_URL=https://elasticsearch:9200
     depends_on:
       - elasticsearch
+    volumes:
+      - ssl_data:/etc/logstash/ssl
     networks:
       - network
   
@@ -40,12 +46,14 @@ services:
     build: ./Filebeat
     volumes:
       - /home/pdelanno/logs:/logs
+      - ssl_data:/etc/filebeat/ssl
+    depends_on:
+      - elasticsearch
     networks:
       - network
 
 volumes:
-  elasticsearch_data:
-    driver: local
+  ssl_data:
     
 networks:
   network:
