--- a/Filebeat/Dockerfile
+++ b/Filebeat/Dockerfile
@@ -19,6 +19,6 @@ RUN mkdir /logs
 
 RUN mkdir /etc/filebeat/ssl
 
-#CMD ["filebeat", "-e", "-c", "/etc/filebeat/filebeat.yml"]
+CMD ["filebeat", "-e", "-c", "/etc/filebeat/filebeat.yml"]
 
-CMD ["tail", "-f", "/dev/null"]
+#CMD ["tail", "-f", "/dev/null"]
