--- a/Kibana/Dockerfile
+++ b/Kibana/Dockerfile
@@ -3,6 +3,7 @@ FROM debian:latest
 RUN apt-get update
 RUN apt-get install -y wget
 RUN apt-get install -y gpg
+#RUN apt-get install -y vim
 
 RUN wget -qO- https://artifacts.elastic.co/GPG-KEY-elasticsearch | gpg --dearmor -o /usr/share/keyrings/elasticsearch-keyring.gpg
 
@@ -15,8 +16,12 @@ ENV PATH=/usr/share/kibana/bin:$PATH
 
 COPY kibana.yml /etc/kibana/kibana.yml
 
+#COPY auto_setup.sh /etc/kibana/auto_setup.sh
+#RUN chmod 777 /etc/kibana/auto_setup.sh
+#RUN /etc/kibana/auto_setup.sh
+
 RUN mkdir /etc/kibana/ssl
 
-#CMD ["kibana", "--allow-root"]
+CMD ["kibana", "--allow-root"]
 
-CMD ["tail", "-f", "/dev/null"]
+#CMD ["tail", "-f", "/dev/null"]
