--- a/Elastic/elasticsearch.yml
+++ b/Elastic/elasticsearch.yml
@@ -96,13 +96,15 @@ xpack.security.enrollment.enabled: false
 # Enable encryption for HTTP API client connections, such as Kibana, Logstash, and Agents
 xpack.security.http.ssl:
   enabled: true
-  key: /etc/elasticsearch/ssl/key.pem
-  certificate: /etc/elasticsearch/ssl/elastic.crt
+  key: /etc/elasticsearch/ssl/elastic_key.pem
+  certificate: ssl/elastic_cert_signed.crt
+  certificate_authorities: ssl/ca_cert.crt
 # Enable encryption and mutual authentication between cluster nodes
 xpack.security.transport.ssl:
   enabled: true
-  key: /etc/elasticsearch/ssl/key.pem
-  certificate: /etc/elasticsearch/ssl/elastic.crt
+  key: /etc/elasticsearch/ssl/elastic_key.pem
+  certificate: ssl/elastic_cert_signed.crt
+  certificate_authorities: ssl/ca_cert.crt
 # Create a new cluster with the current node only
 # Additional nodes can still join the cluster later
 #cluster.initial_master_nodes: ["buildkitsandbox"]
