--- a/Kibana/kibana.yml
+++ b/Kibana/kibana.yml
@@ -35,19 +35,26 @@ server.host: "0.0.0.0"
 # Enables SSL and paths to the PEM-format SSL certificate and SSL key files, respectively.
 # These settings enable SSL for outgoing requests from the Kibana server to the browser.
 server.ssl.enabled: true
-server.ssl.certificate: /etc/kibana/ssl/elastic.crt
-server.ssl.key: /etc/kibana/ssl/key.pem
+server.ssl.certificate: /etc/kibana/ssl/kibana_cert_signed.crt
+server.ssl.key: /etc/kibana/ssl/kibana_key.pem
+#server.ssl.certificateAuthorities: ["/etc/kibana/ssl/ca_cert.crt"]
+
+#elasticsearch.hosts: ['https://elasticsearch:9200']
+#elasticsearch.username: team
+#elasticsearch.password: 42berlin
+#elasticsearch.ssl.certificateAuthorities: [/var/lib/kibana/<trusted_certificate_here>]
 
 # =================== System: Elasticsearch ===================
 # The URLs of the Elasticsearch instances to use for all your queries.
-#elasticsearch.hosts: ["http://localhost:9200"]
+#elasticsearch.hosts: ["https://localhost:9200"]
 
 # If your Elasticsearch is protected with basic authentication, these settings provide
 # the username and password that the Kibana server uses to perform maintenance on the Kibana
 # index at startup. Your Kibana users still need to authenticate with Elasticsearch, which
 # is proxied through the Kibana server.
-#elasticsearch.username: "kibana_system"
-#elasticsearch.password: "pass"
+#elasticsearch.username: "team"
+#elasticsearch.password: "42berlin"
+#elasticsearch.ssl.certificateAuthorities: [ "/etc/kibana/ssl/ca_cert.crt" ]
 
 # Kibana can also authenticate to Elasticsearch via "service account tokens".
 # Service account tokens are Bearer style tokens that replace the traditional username/password based configuration.
@@ -92,7 +99,7 @@ server.ssl.key: /etc/kibana/ssl/key.pem
 #elasticsearch.ssl.certificateAuthorities: [ "/path/to/your/CA.pem" ]
 
 # To disregard the validity of SSL certificates, change this setting's value to 'none'.
-#elasticsearch.ssl.verificationMode: full
+#elasticsearch.ssl.verificationMode: none
 
 # =================== System: Logging ===================
 # Set the value of this setting to off to suppress all logging output, or to debug to log everything. Defaults to 'info'
