--- a/Logstash/logstash.conf
+++ b/Logstash/logstash.conf
@@ -1,9 +1,10 @@
 input {
   beats {
     port => 5044
-    ssl => true
-    ssl_certificate => "/etc/logstash/ssl/elastic.crt"
-    ssl_key => "/etc/logstash/ssl/key.pem"
+    #ssl => true
+    #ssl_certificate => "/etc/logstash/ssl/logstash_cert_signed.crt"
+    #ssl_key => "/etc/logstash/ssl/logstash_key.pem"
+    #ssl_certificate_authorities => ["/etc/logstash/ssl/ca_cert.crt"]
   }
 }
 
@@ -27,17 +28,23 @@ output {
   if [source_field] =~ /log.log/ {
     elasticsearch {
       hosts => ["https://elasticsearch:9200"]
+      user => "team"
+      password => "42berlin"
       index => "log_index"
-      ssl_certificate => "/etc/logstash/ssl/logstash.crt"
-      ssl_key => "/etc/logstash/ssl/key.pem"
+      ssl_certificate => "/etc/logstash/ssl/logstash_cert_signed.crt"
+      ssl_key => "/etc/logstash/ssl/logstash_key.pem"
+      ssl_certificate_authorities => ["/etc/logstash/ssl/ca_cert.crt"]
     }
   }
   else {
     elasticsearch {
       hosts => ["https://elasticsearch:9200"]
+      user => "team"
+      password => "42berlin"
       index => "test_index"
-      ssl_certificate => "/etc/logstash/ssl/elastic.crt"
-      ssl_key => "/etc/logstash/ssl/key.pem"
+      ssl_certificate => "/etc/logstash/ssl/logstash_cert_signed.crt"
+      ssl_key => "/etc/logstash/ssl/logstash_key.pem"
+      ssl_certificate_authorities => ["/etc/logstash/ssl/ca_cert.crt"]
     }
   }
   stdout {
