--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     container_name: filebeat
     build: ./Filebeat
     volumes:
-      - /home/pdelanno/logs:/logs
+      - ${HOME}/logs:/logs
       - ssl_data:/etc/filebeat/ssl
     depends_on:
       - elasticsearch
