--- a/Elastic/Dockerfile
+++ b/Elastic/Dockerfile
@@ -3,6 +3,7 @@ FROM debian:latest
 RUN apt-get update
 RUN apt-get install -y wget
 RUN apt-get install -y gpg
+RUN apt-get install -y mkcert
 
 RUN wget -qO- https://artifacts.elastic.co/GPG-KEY-elasticsearch | gpg --dearmor -o /usr/share/keyrings/elasticsearch-keyring.gpg
 
