--- a/Logstash/logstash.conf
+++ b/Logstash/logstash.conf
@@ -25,28 +25,37 @@ filter {
 }
 
 output {
-  if [source_field] =~ /log.log/ {
-    elasticsearch {
+  elasticsearch {
       hosts => ["https://elasticsearch:9200"]
-      user => "team"
-      password => "42berlin"
-      index => "log_index"
+      user => "${ELASTICSEARCH_USER}"
+      password => "${ELASTICSEARCH_PW}"
+      index => "pong-%{+YYYY.MM.dd-HH}"
       ssl_certificate => "/etc/logstash/ssl/logstash_cert_signed.crt"
       ssl_key => "/etc/logstash/ssl/logstash_key.pem"
       ssl_certificate_authorities => ["/etc/logstash/ssl/ca_cert.crt"]
     }
-  }
-  else {
-    elasticsearch {
-      hosts => ["https://elasticsearch:9200"]
-      user => "team"
-      password => "42berlin"
-      index => "test_index"
-      ssl_certificate => "/etc/logstash/ssl/logstash_cert_signed.crt"
-      ssl_key => "/etc/logstash/ssl/logstash_key.pem"
-      ssl_certificate_authorities => ["/etc/logstash/ssl/ca_cert.crt"]
-    }
-  }
+  #if [source_field] =~ /log.log/ {
+    #elasticsearch {
+      #hosts => ["https://elasticsearch:9200"]
+      #user => "team"
+      #password => "42berlin"
+      #index => "log_index"
+      #ssl_certificate => "/etc/logstash/ssl/logstash_cert_signed.crt"
+      #ssl_key => "/etc/logstash/ssl/logstash_key.pem"
+      #ssl_certificate_authorities => ["/etc/logstash/ssl/ca_cert.crt"]
+    #}
+  #}
+  #else {
+    #elasticsearch {
+      #hosts => ["https://elasticsearch:9200"]
+      #user => "team"
+      #password => "42berlin"
+      #index => "test_index"
+      #ssl_certificate => "/etc/logstash/ssl/logstash_cert_signed.crt"
+      #ssl_key => "/etc/logstash/ssl/logstash_key.pem"
+      #ssl_certificate_authorities => ["/etc/logstash/ssl/ca_cert.crt"]
+    #}
+  #}
   stdout {
     codec => rubydebug
   }
