ES authentification working properly now, filebeat https still no go

--- a/Elastic/Dockerfile
+++ b/Elastic/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get install apt-transport-https
 
 RUN echo "deb [signed-by=/usr/share/keyrings/elasticsearch-keyring.gpg] https://artifacts.elastic.co/packages/8.x/apt stable main" | tee /etc/apt/sources.list.d/elastic-8.x.list
 
-RUN echo 'root:$ROOT_PW' | chpasswd
+#RUN echo 'root:$ROOT_PW' | chpasswd
 
 RUN mkdir -p /usr/share/elasticsearch
 
@@ -20,11 +20,11 @@ RUN apt-get install elasticsearch
 
 WORKDIR /usr/share/elasticsearch/bin
 
-RUN ./elasticsearch-users useradd team -p 42berlin -r superuser,kibana_system
+#RUN ./elasticsearch-users useradd "$ELASTICSEARCH_USER" -p "$ELASTICSEARCH_PW" -r superuser,kibana_system
 
-RUN chown -R elasticsearch:elasticsearch /usr/share/elasticsearch
-RUN usermod -d /usr/share/elasticsearch elasticsearch
-RUN usermod -s /bin/bash elasticsearch
+# RUN chown -R elasticsearch:elasticsearch /usr/share/elasticsearch
+# RUN usermod -d /usr/share/elasticsearch elasticsearch
+# RUN usermod -s /bin/bash elasticsearch
 
 COPY elasticsearch.yml /etc/elasticsearch/elasticsearch.yml
 RUN chmod 777 /etc/elasticsearch/elasticsearch.yml
@@ -32,13 +32,14 @@ RUN chmod 777 /etc/elasticsearch/elasticsearch.yml
 RUN mkdir /etc/elasticsearch/ssl
 
 COPY gen-cert.sh /usr/share/elasticsearch/gen-cert.sh
+COPY user-setup.sh /usr/share/elasticsearch/user-setup.sh
 RUN chmod 777 /usr/share/elasticsearch/gen-cert.sh
+RUN chmod 777 /usr/share/elasticsearch/user-setup.sh
 RUN /usr/share/elasticsearch/gen-cert.sh
 
-USER elasticsearch
 ENV PATH=/usr/share/elasticsearch/bin:$PATH
 
-CMD ["elasticsearch"]
+CMD ["/usr/share/elasticsearch/user-setup.sh"]
 
 #CMD ["tail", "-f", "/dev/null"]
 #user: team, pw:42berlin
