--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+# ONLY FOR LEARNING PURPOSES
+# NEVER COMMIT A FILE WITH SENSITIVE DATA INTO YOUR REPO
 ELASTICSEARCH_USER=team
 ELASTICSEARCH_PW=42berlin
 ROOT_PW=1234
