--- a/src/Filebeat/Dockerfile
+++ b/src/Filebeat/Dockerfile
@@ -3,22 +3,20 @@ FROM debian:latest
 RUN apt-get update
 RUN apt-get install -y wget
 RUN apt-get install -y gpg
-RUN apt-get install -y vim
 
 RUN wget -qO- https://artifacts.elastic.co/GPG-KEY-elasticsearch | gpg --dearmor -o /usr/share/keyrings/elasticsearch-keyring.gpg
 
 RUN echo "deb [signed-by=/usr/share/keyrings/elasticsearch-keyring.gpg] https://artifacts.elastic.co/packages/8.x/apt stable main" | tee /etc/apt/sources.list.d/elastic-8.x.list
 
 RUN apt-get update
-RUN apt-get install logstash
+RUN apt-get install -y filebeat
 
-COPY logstash.conf /etc/logstash/conf.d/
+ENV PATH=/usr/share/filebeat/bin:$PATH
 
-ENV PATH=/usr/share/logstash/bin:$PATH
+COPY filebeat.yml /etc/filebeat/filebeat.yml
 
-RUN logstash-plugin install logstash-filter-environment
-RUN mkdir /etc/logstash/ssl
+RUN mkdir /logs
 
-CMD ["logstash", "--path.settings=/etc/logstash", "--config.reload.automatic"]
+RUN mkdir /etc/filebeat/ssl
 
-#CMD ["tail", "-f", "/dev/null"]
+CMD ["filebeat", "-e", "-c", "/etc/filebeat/filebeat.yml"]
