--- a/src/Kibana/kibana.yml
+++ b/src/Kibana/kibana.yml
@@ -3,7 +3,7 @@
 
 # =================== System: Kibana Server ===================
 # Kibana is served by a back end server. This setting specifies the port to use.
-#server.port: 5601
+server.port: 9400
 
 # Specifies the address to which the Kibana server will bind. IP addresses and host names are both valid values.
 # The default is 'localhost', which usually means remote machines will not be able to connect.
@@ -52,9 +52,9 @@ server.ssl.key: /etc/kibana/ssl/localhost_key.pem
 # the username and password that the Kibana server uses to perform maintenance on the Kibana
 # index at startup. Your Kibana users still need to authenticate with Elasticsearch, which
 # is proxied through the Kibana server.
-#elasticsearch.username: "team"
-#elasticsearch.password: "42berlin"
-#elasticsearch.ssl.certificateAuthorities: [ "/etc/kibana/ssl/ca_cert.crt" ]
+#elasticsearch.username:
+#elasticsearch.password:
+#elasticsearch.ssl.certificateAuthorities:
 
 # Kibana can also authenticate to Elasticsearch via "service account tokens".
 # Service account tokens are Bearer style tokens that replace the traditional username/password based configuration.
