--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-# ONLY FOR LEARNING PURPOSES
+# ONLY FOR EDUCATIONAL PURPOSES
 # NEVER COMMIT A FILE WITH SENSITIVE DATA INTO YOUR REPO
+
 ELASTICSEARCH_USER=team
 ELASTICSEARCH_PW=42berlin
 ROOT_PW=1234
